# clubs-rust

./: AGENTS.md  Cargo.toml  README.md
docs/: FrostProvenanceMarks-2.md  FrostProvenanceMarks.md  ProvenanceMarksCrypto.md  PublicKeyPermits.md  XanaduToReality.md  envelope-links.md
src/: AGENTS.md  edition.rs  error.rs  lib.rs  provenance_mark_provider.rs  public_key_permit.rs
src/frost/: aggregate.rs  coordinator.rs  group.rs  mod.rs  participant.rs  participant_core.rs  signing.rs
src/frost/content/: commitment.rs  coordinator.rs  gamma_share.rs  mod.rs  output.rs  participant.rs  response_share.rs  signing_package.rs
src/frost/pm/: commitment.rs  coordinator.rs  gamma_share.rs  mod.rs  participant.rs  primitives.rs  response_share.rs  signing_package.rs  state.rs
src/frost/signing/: commitment.rs  coordinator.rs  group_aggregate.rs  mod.rs  package.rs  participant.rs  share.rs  shares.rs
tests/: basic_scenario.rs  demo_workflow.rs  frost_club_integration.rs  frost_content_randomness.rs  frost_envelope.rs  frost_provenance.rs  frost_provenance_randomness.rs
