[package]
name = "clubs"
version = "0.1.0"
edition = "2024"
description = "Gordian Clubs for Rust."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/clubs-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/clubs"
keywords = ["encoding", "cbor", "binary", "format", "publishing"] # Up to five
categories = ["data-structures", "encoding"]                      # https://crates.io/category_slugs

[dependencies]
provenance-mark = "^0.17.0"
dcbor = "^0.24.0"
bc-ur = "^0.17.0"
bc-envelope = "^0.38.0"
bc-xid = "^0.17.0"
bc-components = "^0.29.0"
known-values = "^0.12.0"
rand = "^0.9.2"
k256 = { version = "^0.13.4", features = ["arithmetic", "hash2curve"] }
sha2 = "^0.10.9"
rand_core = "^0.9.3"

frost-secp256k1-tr = "2.2.0"
hex = "^0.4.3"
thiserror = "^2.0"

[dev-dependencies]
indoc = "^2.0.0"
chrono = "^0.4.42"
nistrs = "^0.1.2"
